force-app/main/default/objects/SVMXC__Counter_Details__c/SVMXC__Counter_Details__c.object-meta.xml
<CustomObject>
    <description>This object stores multiple aspects of product counters separated by record types. Record type Definition is used for basic definition of a product counter such as its range of values. Record Type Coverage is used to define counter-based coverage in warranties and service contracts. Record Type Reading is used to capture current counter readings for installed products.</description>
    <label>Counter Detail</label>
    <nameField>
        <displayFormat>CN-{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counter Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>