force-app/main/default/objects/SVMXC__Counter_Details__c/fields/SVMXC__Is_Counter_Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Is_Counter_Active__c</fullName>
    <description>Flag to indicate active status of related counter definition</description>
    <formula>SVMXC__Counter_Definition__r.SVMXC__Active__c</formula>
    <label>Is Counter Active?</label>
    <type>Checkbox</type>
</CustomField>