force-app/main/default/objects/SVMXC__Counter_Details__c/fields/SVMXC__Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify latest reading when we have multiple readings for same counter definition.</description>
    <inlineHelpText>This field is used to identify latest reading when we have multiple readings for same counter definition.</inlineHelpText>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>