force-app/main/default/objects/SVMXC__Counter_Details__c/recordTypes/SVMXC__Coverage.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Coverage</fullName>
    <active>true</active>
    <label>Coverage</label>
</RecordType>