force-app/main/default/objects/SVMXC__Counter_Details__c/recordTypes/SVMXC__Definition.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Definition</fullName>
    <active>true</active>
    <label>Definition</label>
</RecordType>