force-app/main/default/objects/SVMXC__Counter_Details__c/recordTypes/SVMXC__Reading.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Reading</fullName>
    <active>true</active>
    <label>Reading</label>
</RecordType>